--- a/ACT04_Cordova/www/index.html
+++ b/ACT04_Cordova/www/index.html
@@ -1,16 +1,31 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
+        
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <title>ACT04Cordova</title>
     </head>
     <body>
-        
-        <script type="text/javascript" src="cordova.js"></script>
+        <div class="container-fluid">
+            <div style="height: 130px;">
+                <img src="images/re.png" id="resetBtn" style="width: 80px; height: auto;">
+            </div>
+            <div style="top: 130px; z-index: 1">
+                <img class="base espacio" src="images/1.png" id="0" onclick="jump('0')">
+                <img class="base espacio" src="images/1.png" id="1" onclick="jump('1')">
+                <img class="base espacio" src="images/1.png" id="2" onclick="jump('2')">
+                <img class="base espacio" src="images/0.png" id="3" onclick="jump('3')">
+                <img class="base espacio" src="images/2.png" id="4" onclick="jump('4')">
+                <img class="base espacio" src="images/2.png" id="5" onclick="jump('5')">
+                <img class="base espacio" src="images/2.png" id="6" onclick="jump('6')">
+            </div>
+        </div>
+        <!--<script type="text/javascript" src="cordova.js"></script>-->
         <script type="text/javascript" src="scripts/platformOverrides.js"></script>
         <script type="text/javascript" src="scripts/jquery.js"></script>
         <script type="text/javascript" src="scripts/musicPlayer.js"></script>
